// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshots 1`] = `
.c0 {
  color: inherit;
  cursor: pointer;
  margin: 0;
  border: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  vertical-align: middle;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  font: inherit;
  padding: 0;
  outline: none;
}

.c0:disabled,
.c0:disabled:hover,
.c0:disabled:active,
.c0.disabled,
.c0.disabled:hover,
.c0.disabled:active {
  cursor: default;
  pointer-events: none;
}

<button
  class="c0 ButtonBase"
  tabindex="0"
/>
`;

exports[`should match snapshots 2`] = `
.c0 {
  color: inherit;
  cursor: pointer;
  margin: 0;
  border: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  vertical-align: middle;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  font: inherit;
  padding: 0;
  outline: none;
}

.c0:disabled,
.c0:disabled:hover,
.c0:disabled:active,
.c0.disabled,
.c0.disabled:hover,
.c0.disabled:active {
  cursor: default;
  pointer-events: none;
}

<button
  class="c0 ButtonBase"
  tabindex="0"
>
  Button
</button>
`;
